--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-@model IQueryable<Book>
+@model BookListViewModel
 
 <header>
     <div class="text-center">
@@ -10,6 +10,7 @@
     </div>
     <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
 </header>
+
 
 
 <table class="table table-dark table-striped table-hover">
@@ -25,25 +26,39 @@
             <th scope="col">Classification</th>
             <th scope="col">Category</th>
             <th scope="col">Price</th>
+            <th scope="col">PageNumber</th>
+
         </tr>
     </thead>
 
 
     <tbody>
-        @foreach (var x in Model)
-        {  
-        <tr>
-            <th>@x.BookId</th>
-            <th>@x.Title</th>
-            <td>@x.AuthorFirst</td>
-            <td>@x.AuthorMiddle</td>
-            <td>@x.AuthorLast</td>
-            <td>@x.Publisher</td>
-            <td>@x.ISBN</td>
-            <td>@x.Classification</td>
-            <td>@x.Category</td>
-            <td>$@x.Price</td>
-        </tr>
+        @foreach (var x in Model.Books)
+        {
+            <tr>
+                <th>@x.BookId</th>
+                <th>@x.Title</th>
+                <td>@x.AuthorFirst</td>
+                <td>@x.AuthorMiddle</td>
+                <td>@x.AuthorLast</td>
+                <td>@x.Publisher</td>
+                <td>@x.ISBN</td>
+                <td>@x.Classification</td>
+                <td>@x.Category</td>
+                <td>$@x.Price</td>
+                <td>@x.PageNum</td>
+
+            </tr>
         }
+
+        
     </tbody>
+   
 </table>
+<br />
+<br />
+<br />
+<br />
+
+<div page-model="@Model.PagingInfo" page-action="Index"></div>
+
