--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,8 +8,22 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <div>
-        @RenderBody()
+   <div class="bg-dark text-white p-2">
+       <span class="navbar-brand ml-2">BOOK STORE</span>
+   </div>
+    <div class="row m-1 p-1">
+        <div id="blah" class="col-2">
+            <h1>Welcome to the bookstore!</h1>
+        </div>
+        <div class="col-10">
+            @RenderBody()
+        </div>
     </div>
+
+
+
+        
+ 
+
 </body>
 </html>
