--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using Bookstore.Models
 @using Bookstore.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, BookStore
+@addTagHelper *, Bookstore
