Assignment 7 Final Push

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,7 +14,10 @@
     <div class="row m-1 p-1">
         <div id="blah" class="col-2">
             <h1>Welcome to the bookstore!</h1>
+            <vc:navigation-menu />
+
         </div>
+        <!--Renders Body-->
         <div class="col-10">
             @RenderBody()
         </div>
