--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 @model BookListViewModel
 
-
+<!--Top part of display-->
 <table class="table table-dark table-striped table-hover">
     <thead class="thead-light table-bordered table-condensed">
         <tr>
@@ -24,19 +24,7 @@
     <tbody>
         @foreach (var x in Model.Books)
         {
-            <tr>
-                <th>@x.BookId</th>
-                <td>@x.Title</td>
-                <td>@x.AuthorFirst</td>
-                <td>@x.AuthorMiddle</td>
-                <td>@x.AuthorLast</td>
-                <td>@x.Publisher</td>
-                <td>@x.ISBN</td>
-                <td>@x.Classification</td>
-                <td>@x.Category</td>
-                <td>$@x.Price</td>
-                <td>@x.PageNum</td>
-            </tr>
+            <partial name="BookSummary" model="x" />
         } 
     </tbody>
 </table>
@@ -47,5 +35,6 @@
 <div page-model="@Model.PagingInfo" page-action="Index" page-classes-enabled="true" page-class="btn"
      page-class-normal="btn-outline-dark"
      page-class-selected="btn-primary"
+     page-url-category="@Model.Category"
      class="btn-group pull-right m-1"></div>
 
