--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -19,6 +19,7 @@
             <th scope="col">Category</th>
             <th scope="col">Price</th>
             <th scope="col">PageNumber</th>
+            <th scope="col">Purchase</th>
         </tr>
     </thead>
     <tbody>
