--- a/Views/Shared/BookSummary.cshtml
+++ b/Views/Shared/BookSummary.cshtml
@@ -13,4 +13,17 @@
     <td>@Model.Category</td>
     <td>$@Model.Price</td>
     <td>@Model.PageNum</td>
+    <td>
+        <form id="@Model.BookId" asp-page="/Purchase" method="post">
+            <input type="hidden" asp-for="BookId" />
+            <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
+            <span class="card-text p-1">
+                <!--@Model.Title-->
+                <button type="submit" class="btn-success btn-sm pull-right" style="float:right">
+                    Purchase
+                </button>
+            </span>
+
+        </form>
+    </td>
 </tr>
